@@ -16,3 +16,5 @@
 * id `altitude_scale`
 * fix analemma height #3
 * visible horizon in sky map
+* path of Sun and Moon on sky
+* attribute `max_width`
